--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,8 @@ body {
 	margin: 50px auto;
 	max-width: 800px;
 	background-color: rgb(248, 248, 215);
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .homepage-links {
 	display: flex;
